--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<center><h1><header>First Page :)</header></h1></center>
-		<p>hello this is med first page in coursera learning course in there is some random text about the courser we just talked about in this day so enjoy learning process it is not easy but it is fun</p>
-	</body>
+		<hr>
+		<center><p>welcome to this is exiting journey of learning web developement sit tight :)</p></center>
 </html>
