--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf_8">
 		<title>First site</title>
+
 	</head>
 	<body>
 		<center><h1><header>First Page :)</header></h1></center>
 		<hr>
-		<center><p>welcome to this is exiting journey of learning web developement sit tight :)</p></center>
+		<center><p>welcome to this is exiting journey of learning web developement sit tight :) and there is a rule above this</p></center>
 </html>
