--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	</head>
 	<body>
-		<center><h1><header>First Page :)</header></h1></center>
-		<hr>
-		<center><p>welcome to this is exiting journey of learning web developement sit tight :) and there is a rule above this</p></center>
+		<div class="container">
+			hello world
+		</div>
 </html>
