--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
 		<link rel="stylesheet" href="CSS/style.css">
 	</head>
 	<body>
+		<h1>Our Menu</h1>
 		<div class="container">
-			hello world1
+
+			<section  class="section s1">
+				<div class="title T1">Chicken</div>
+					Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College. 
+			</section>
+
+			<section class="section s2">
+				<div class="title T2">Beef</div>
+					Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College.  
+			</section>
+
+			<section  class="section s3">
+				<div class="title T3">Sushi</div>
+					Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+			 		College.
+			</section>
+
 		</div>
-		
-
-
-
-
-
-
-
-		
 	</body>
 </html>
