--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf_8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Coursera Assignement</title>
-		<link rel="stylesheet" href="CSS/style.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<h1>Our Menu</h1>
